# veneer

./: Cargo.toml  README.md  ci.sh
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: files.rs  print.rs
src/: allocator.rs  cstr.rs  directory.rs  env.rs  error.rs  fmt.rs  fs.rs  io.rs  lib.rs  libc.rs  prelude.rs  syscalls.rs
src/fs/: directory.rs  mod.rs
src/mem/: impls.rs  macros.rs  mod.rs  x86_64.rs
veneer-macros/: Cargo.toml
veneer-macros/src/: lib.rs
